--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Extreme Portfolio</title>
+    <title>user106 - Futuristic Portfolio</title>
+    <meta name="description" content="Portfolio of user106 - Innovative Developer and Digital Creator">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="vanta-background"></div>
     <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    
     <header>
         <nav>
             <ul>
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -23,52 +31,120 @@
 
     <main>
         <section id="home" class="full-height">
-            <h1 class="glitch" data-text="YOUR NAME">YOUR NAME</h1>
-            <p class="subtitle">Web Developer | Designer | Creative Thinker</p>
+            <h1 class="glitch" data-text="user106">user106</h1>
+            <p class="subtitle">Innovator | Developer | Digital Architect</p>
+            <a href="#contact" class="cta-button">Initiate Contact</a>
         </section>
 
         <section id="about" class="full-height">
-            <h2>About Me</h2>
+            <h2>System Overview</h2>
             <div class="about-content">
-                <img src="your-image.jpg" alt="Your Name" class="profile-pic">
-                <p>Your compelling personal story and professional background go here. Make it interesting and unique!</p>
+                <div class="profile-pic-container">
+                    <img src="https://picsum.photos/300" alt="user106" class="profile-pic">
+                </div>
+                <div class="about-text">
+                    <p>Greetings, I am user106. My primary function is to engineer innovative digital solutions and architect groundbreaking software ecosystems.</p>
+                    <p>With a background in quantum computing and neural network design, I bring a unique perspective to every project. My mission is to push the boundaries of what's possible in the digital realm.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="full-height">
+            <h2>Skill Matrix</h2>
+            <div class="skills-container">
+                <div class="skill">
+                    <h3>Core Technologies</h3>
+                    <ul>
+                        <li>Quantum Algorithms</li>
+                        <li>Neural Architecture</li>
+                        <li>Blockchain Systems</li>
+                        <li>AR/VR Development</li>
+                        <li>AI Integration</li>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Programming Languages</h3>
+                    <ul>
+                        <li>Rust</li>
+                        <li>Go</li>
+                        <li>Python</li>
+                        <li>WebAssembly</li>
+                        <li>Solidity</li>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Frameworks & Tools</h3>
+                    <ul>
+                        <li>TensorFlow</li>
+                        <li>Unreal Engine</li>
+                        <li>Ethereum</li>
+                        <li>Kubernetes</li>
+                        <li>GraphQL</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
         <section id="projects" class="full-height">
-            <h2>My Projects</h2>
+            <h2>Project Showcase</h2>
             <div class="project-grid">
-                <div class="project-card">
-                    <img src="project1.jpg" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Brief description of Project 1</p>
-                </div>
-                <div class="project-card">
-                    <img src="project2.jpg" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Brief description of Project 2</p>
-                </div>
-                <div class="project-card">
-                    <img src="project3.jpg" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Brief description of Project 3</p>
-                </div>
+                <article class="project-card">
+                    <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=1');"></div>
+                    <h3>QuantumMind</h3>
+                    <p>A revolutionary AI system leveraging quantum computing for unprecedented problem-solving capabilities.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn">Explore</a>
+                        <a href="#" class="btn">Source Code</a>
+                    </div>
+                </article>
+                <article class="project-card">
+                    <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=2');"></div>
+                    <h3>NeoGenesis</h3>
+                    <p>An immersive VR world-building platform powered by advanced procedural generation algorithms.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn">Experience</a>
+                        <a href="#" class="btn">Source Code</a>
+                    </div>
+                </article>
+                <article class="project-card">
+                    <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=3');"></div>
+                    <h3>CryptoNexus</h3>
+                    <p>A decentralized ecosystem bridging multiple blockchains for seamless cross-chain interactions.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn">Whitepaper</a>
+                        <a href="#" class="btn">Source Code</a>
+                    </div>
+                </article>
             </div>
         </section>
 
         <section id="contact" class="full-height">
-            <h2>Get In Touch</h2>
+            <h2>Initiate Communication</h2>
             <form id="contact-form">
-                <input type="text" placeholder="Name" required>
-                <input type="email" placeholder="Email" required>
-                <textarea placeholder="Message" required></textarea>
-                <button type="submit">Send Message</button>
+                <div class="form-group">
+                    <input type="text" id="name" name="name" required>
+                    <label for="name">Identifier</label>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="email" name="email" required>
+                    <label for="email">Communication Channel</label>
+                </div>
+                <div class="form-group">
+                    <textarea id="message" name="message" required></textarea>
+                    <label for="message">Transmission Content</label>
+                </div>
+                <button type="submit">Transmit</button>
             </form>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <div class="social-links">
+            <a href="#" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+            <a href="#" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+            <a href="#" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
+        </div>
+        <p>&copy; <span id="current-year"></span> user106. All rights reserved.</p>
     </footer>
 </body>
 </html>
