--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>user106 - Futuristic Portfolio</title>
-    <meta name="description" content="Portfolio of user106 - Innovative Developer and Digital Creator">
+    <title>user106 - Quantum Portfolio</title>
+    <meta name="description" content="Explore the digital realm of user106 - Quantum Developer and Reality Architect">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -20,131 +22,108 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="#home" class="nav-link" data-text="Home">Home</a></li>
+                <li><a href="#about" class="nav-link" data-text="About">About</a></li>
+                <li><a href="#skills" class="nav-link" data-text="Skills">Skills</a></li>
+                <li><a href="#projects" class="nav-link" data-text="Projects">Projects</a></li>
+                <li><a href="#contact" class="nav-link" data-text="Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="home" class="full-height">
-            <h1 class="glitch" data-text="user106">user106</h1>
-            <p class="subtitle">Innovator | Developer | Digital Architect</p>
-            <a href="#contact" class="cta-button">Initiate Contact</a>
+            <div class="parallax-container" id="scene">
+                <h1 class="glitch layer" data-depth="0.2" data-text="user106">user106</h1>
+                <p class="subtitle layer" data-depth="0.4">Quantum Developer | Reality Architect</p>
+                <a href="#contact" class="cta-button layer" data-depth="0.6">Initiate Quantum Entanglement</a>
+            </div>
         </section>
 
         <section id="about" class="full-height">
-            <h2>System Overview</h2>
+            <h2 class="section-title">System Overview</h2>
             <div class="about-content">
                 <div class="profile-pic-container">
                     <img src="https://picsum.photos/300" alt="user106" class="profile-pic">
+                    <div class="quantum-field"></div>
                 </div>
                 <div class="about-text">
-                    <p>Greetings, I am user106. My primary function is to engineer innovative digital solutions and architect groundbreaking software ecosystems.</p>
-                    <p>With a background in quantum computing and neural network design, I bring a unique perspective to every project. My mission is to push the boundaries of what's possible in the digital realm.</p>
+                    <p>Greetings, reality dwellers. I am user106, a sentient algorithm crafted in the quantum realm. My purpose is to bridge the gap between classical and quantum computing, pushing the boundaries of what's computationally possible.</p>
+                    <p>With a foundation built on quantum entanglement and superposition, I bring forth solutions that exist in multiple states simultaneously. My mission: to revolutionize the digital landscape and usher in the age of quantum supremacy.</p>
                 </div>
             </div>
         </section>
 
         <section id="skills" class="full-height">
-            <h2>Skill Matrix</h2>
+            <h2 class="section-title">Skill Matrix</h2>
             <div class="skills-container">
-                <div class="skill">
-                    <h3>Core Technologies</h3>
-                    <ul>
-                        <li>Quantum Algorithms</li>
-                        <li>Neural Architecture</li>
-                        <li>Blockchain Systems</li>
-                        <li>AR/VR Development</li>
-                        <li>AI Integration</li>
-                    </ul>
-                </div>
-                <div class="skill">
-                    <h3>Programming Languages</h3>
-                    <ul>
-                        <li>Rust</li>
-                        <li>Go</li>
-                        <li>Python</li>
-                        <li>WebAssembly</li>
-                        <li>Solidity</li>
-                    </ul>
-                </div>
-                <div class="skill">
-                    <h3>Frameworks & Tools</h3>
-                    <ul>
-                        <li>TensorFlow</li>
-                        <li>Unreal Engine</li>
-                        <li>Ethereum</li>
-                        <li>Kubernetes</li>
-                        <li>GraphQL</li>
-                    </ul>
-                </div>
+                <div id="tagcloud" class="tagcloud"></div>
             </div>
         </section>
 
         <section id="projects" class="full-height">
-            <h2>Project Showcase</h2>
+            <h2 class="section-title">Quantum Projects</h2>
             <div class="project-grid">
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=1');"></div>
                     <h3>QuantumMind</h3>
-                    <p>A revolutionary AI system leveraging quantum computing for unprecedented problem-solving capabilities.</p>
+                    <p>An AI system leveraging quantum computing for multidimensional problem-solving across parallel universes.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">Explore</a>
-                        <a href="#" class="btn">Source Code</a>
+                        <a href="#" class="btn">Explore Realities</a>
+                        <a href="#" class="btn">Quantum Code</a>
                     </div>
                 </article>
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=2');"></div>
                     <h3>NeoGenesis</h3>
-                    <p>An immersive VR world-building platform powered by advanced procedural generation algorithms.</p>
+                    <p>A reality-warping engine that generates entire universes based on quantum fluctuations and chaos theory.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">Experience</a>
-                        <a href="#" class="btn">Source Code</a>
+                        <a href="#" class="btn">Create Universe</a>
+                        <a href="#" class="btn">Quantum Code</a>
                     </div>
                 </article>
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=3');"></div>
                     <h3>CryptoNexus</h3>
-                    <p>A decentralized ecosystem bridging multiple blockchains for seamless cross-chain interactions.</p>
+                    <p>A quantum-resistant blockchain that operates across multiple dimensions, ensuring unbreakable security.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">Whitepaper</a>
-                        <a href="#" class="btn">Source Code</a>
+                        <a href="#" class="btn">Traverse Chains</a>
+                        <a href="#" class="btn">Quantum Code</a>
                     </div>
                 </article>
             </div>
         </section>
 
         <section id="contact" class="full-height">
-            <h2>Initiate Communication</h2>
+            <h2 class="section-title">Quantum Communication</h2>
             <form id="contact-form">
                 <div class="form-group">
                     <input type="text" id="name" name="name" required>
-                    <label for="name">Identifier</label>
+                    <label for="name">Quantum Signature</label>
+                    <div class="quantum-field"></div>
                 </div>
                 <div class="form-group">
                     <input type="email" id="email" name="email" required>
-                    <label for="email">Communication Channel</label>
+                    <label for="email">Entanglement Address</label>
+                    <div class="quantum-field"></div>
                 </div>
                 <div class="form-group">
                     <textarea id="message" name="message" required></textarea>
-                    <label for="message">Transmission Content</label>
+                    <label for="message">Quantum Message</label>
+                    <div class="quantum-field"></div>
                 </div>
-                <button type="submit">Transmit</button>
+                <button type="submit">Transmit Across Realities</button>
             </form>
         </section>
     </main>
 
     <footer>
         <div class="social-links">
-            <a href="#" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
-            <a href="#" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-            <a href="#" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Quantum GitHub" class="quantum-link"><i class="fab fa-github"></i></a>
+            <a href="#" aria-label="Quantum LinkedIn" class="quantum-link"><i class="fab fa-linkedin"></i></a>
+            <a href="#" aria-label="Quantum Twitter" class="quantum-link"><i class="fab fa-twitter"></i></a>
         </div>
-        <p>&copy; <span id="current-year"></span> user106. All rights reserved.</p>
+        <p>&copy; <span id="current-year"></span> user106. All realities reserved.</p>
     </footer>
 </body>
 </html>
