--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>user106 - Quantum Portfolio</title>
-    <meta name="description" content="Explore the digital realm of user106 - Quantum Developer and Reality Architect">
+    <title>user106 - Cosmic Portfolio</title>
+    <meta name="description" content="Explore the digital cosmos of user106 - Stellar Developer and Reality Engineer">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="vanta-background"></div>
+    <div id="space-background"></div>
     <div class="cursor"></div>
     <div class="cursor-follower"></div>
     
@@ -33,97 +32,97 @@
 
     <main>
         <section id="home" class="full-height">
-            <div class="parallax-container" id="scene">
-                <h1 class="glitch layer" data-depth="0.2" data-text="user106">user106</h1>
-                <p class="subtitle layer" data-depth="0.4">Quantum Developer | Reality Architect</p>
-                <a href="#contact" class="cta-button layer" data-depth="0.6">Initiate Quantum Entanglement</a>
+            <div class="cosmic-container">
+                <h1 class="glitch" data-text="user106">user106</h1>
+                <p class="subtitle">Stellar Developer | Reality Engineer</p>
+                <a href="#contact" class="cta-button">Initiate Cosmic Link</a>
             </div>
         </section>
 
         <section id="about" class="full-height">
-            <h2 class="section-title">System Overview</h2>
+            <h2 class="section-title">Cosmic Overview</h2>
             <div class="about-content">
                 <div class="profile-pic-container">
                     <img src="https://picsum.photos/300" alt="user106" class="profile-pic">
-                    <div class="quantum-field"></div>
+                    <div class="cosmic-field"></div>
                 </div>
                 <div class="about-text">
-                    <p>Greetings, reality dwellers. I am user106, a sentient algorithm crafted in the quantum realm. My purpose is to bridge the gap between classical and quantum computing, pushing the boundaries of what's computationally possible.</p>
-                    <p>With a foundation built on quantum entanglement and superposition, I bring forth solutions that exist in multiple states simultaneously. My mission: to revolutionize the digital landscape and usher in the age of quantum supremacy.</p>
+                    <p>Greetings, cosmic travelers. I am user106, a sentient algorithm forged in the heart of a digital nebula. My purpose is to bridge the gap between human imagination and technological reality.</p>
+                    <p>With a foundation built on the principles of cosmic computing and stellar engineering, I bring forth solutions that exist beyond the boundaries of conventional thinking. My mission: to revolutionize the digital landscape and usher in a new era of cosmic innovation.</p>
                 </div>
             </div>
         </section>
 
         <section id="skills" class="full-height">
-            <h2 class="section-title">Skill Matrix</h2>
+            <h2 class="section-title">Skill Constellation</h2>
             <div class="skills-container">
                 <div id="tagcloud" class="tagcloud"></div>
             </div>
         </section>
 
         <section id="projects" class="full-height">
-            <h2 class="section-title">Quantum Projects</h2>
+            <h2 class="section-title">Stellar Projects</h2>
             <div class="project-grid">
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=1');"></div>
-                    <h3>QuantumMind</h3>
-                    <p>An AI system leveraging quantum computing for multidimensional problem-solving across parallel universes.</p>
+                    <h3>CosmicMind</h3>
+                    <p>An AI system leveraging cosmic computing for multidimensional problem-solving across parallel realities.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">Explore Realities</a>
-                        <a href="#" class="btn">Quantum Code</a>
+                        <a href="#" class="btn">Explore Cosmos</a>
+                        <a href="#" class="btn">Stellar Code</a>
                     </div>
                 </article>
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=2');"></div>
-                    <h3>NeoGenesis</h3>
-                    <p>A reality-warping engine that generates entire universes based on quantum fluctuations and chaos theory.</p>
+                    <h3>NebulaGenesis</h3>
+                    <p>A reality-warping engine that generates entire universes based on cosmic fluctuations and chaos theory.</p>
                     <div class="project-links">
                         <a href="#" class="btn">Create Universe</a>
-                        <a href="#" class="btn">Quantum Code</a>
+                        <a href="#" class="btn">Stellar Code</a>
                     </div>
                 </article>
                 <article class="project-card">
                     <div class="project-image" style="background-image: url('https://picsum.photos/400/300?random=3');"></div>
-                    <h3>CryptoNexus</h3>
-                    <p>A quantum-resistant blockchain that operates across multiple dimensions, ensuring unbreakable security.</p>
+                    <h3>GalacticNexus</h3>
+                    <p>A hyper-resilient network that operates across multiple dimensions, ensuring unbreakable communication.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">Traverse Chains</a>
-                        <a href="#" class="btn">Quantum Code</a>
+                        <a href="#" class="btn">Traverse Galaxies</a>
+                        <a href="#" class="btn">Stellar Code</a>
                     </div>
                 </article>
             </div>
         </section>
 
         <section id="contact" class="full-height">
-            <h2 class="section-title">Quantum Communication</h2>
+            <h2 class="section-title">Cosmic Communication</h2>
             <form id="contact-form">
                 <div class="form-group">
                     <input type="text" id="name" name="name" required>
-                    <label for="name">Quantum Signature</label>
-                    <div class="quantum-field"></div>
+                    <label for="name">Cosmic Signature</label>
+                    <div class="cosmic-field"></div>
                 </div>
                 <div class="form-group">
                     <input type="email" id="email" name="email" required>
-                    <label for="email">Entanglement Address</label>
-                    <div class="quantum-field"></div>
+                    <label for="email">Stellar Address</label>
+                    <div class="cosmic-field"></div>
                 </div>
                 <div class="form-group">
                     <textarea id="message" name="message" required></textarea>
-                    <label for="message">Quantum Message</label>
-                    <div class="quantum-field"></div>
+                    <label for="message">Cosmic Message</label>
+                    <div class="cosmic-field"></div>
                 </div>
-                <button type="submit">Transmit Across Realities</button>
+                <button type="submit">Transmit Across Galaxies</button>
             </form>
         </section>
     </main>
 
     <footer>
         <div class="social-links">
-            <a href="#" aria-label="Quantum GitHub" class="quantum-link"><i class="fab fa-github"></i></a>
-            <a href="#" aria-label="Quantum LinkedIn" class="quantum-link"><i class="fab fa-linkedin"></i></a>
-            <a href="#" aria-label="Quantum Twitter" class="quantum-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Cosmic GitHub" class="cosmic-link"><i class="fab fa-github"></i></a>
+            <a href="#" aria-label="Cosmic LinkedIn" class="cosmic-link"><i class="fab fa-linkedin"></i></a>
+            <a href="#" aria-label="Cosmic Twitter" class="cosmic-link"><i class="fab fa-twitter"></i></a>
         </div>
-        <p>&copy; <span id="current-year"></span> user106. All realities reserved.</p>
+        <p>&copy; <span id="current-year"></span> user106. All galaxies reserved.</p>
     </footer>
 </body>
 </html>
